--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Calificar Profesores</title>
+            <title>Calificar Maestros</title>
                 <link rel="stylesheet" href="styles/main.css">
                 </head>
                 <body>
@@ -15,7 +15,7 @@
                                             <div class="teacher-card">
                                                     <h3>Profesor Ejemplo</h3>
                                                             <p>Matemáticas</p>
-                                                                    <button onclick="alert('¡Calificación enviada!')">⭐ Calificar</button>
+                                                                    <button onclick="rateTeacher()">Calificar</button>
                                                                         </div>
 
                                                                             <script src="scripts/app.js"></script>
